Fix phone form styling
The width setting was set for the desktop dimension also on the phone.
Links now break at word when reaching the end of line.

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -55,6 +55,7 @@ body {
 a {
   text-decoration: none;
   color: $highlight;
+  word-break: break-word;
 }
 
 //Headings
